--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.4.1
-crispy-bootstrap5==0.6
+crispy-bootstrap5==0.4
+dj-database-url==0.5.0
 Django==3.2.12
-django-crispy-forms==1.13.0
+django-configurations==2.3.2
+django-crispy-forms==1.12.0
+importlib-metadata==4.8.3
 pytz==2021.3
 sqlparse==0.4.2
 typing-extensions==4.1.1
+zipp==3.6.0
