--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
 asgiref==3.4.1
+cffi==1.15.0
 crispy-bootstrap5==0.4
+dataclasses==0.8
 dj-database-url==0.5.0
 Django==3.2.12
-django-configurations==2.3.2
+django-configurations==2.2
 django-crispy-forms==1.12.0
-importlib-metadata==4.8.3
+pycparser==2.21
 pytz==2021.3
+six==1.16.0
 sqlparse==0.4.2
 typing-extensions==4.1.1
-zipp==3.6.0
