--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
+argon2-cffi==20.1.0
 asgiref==3.4.1
-cffi==1.15.0
+cffi==1.14.6
 crispy-bootstrap5==0.4
-dataclasses==0.8
 dj-database-url==0.5.0
 Django==3.2.12
 django-configurations==2.2
 django-crispy-forms==1.12.0
-pycparser==2.21
+django-debug-toolbar==3.2.4
+pycparser==2.20
 pytz==2021.3
 six==1.16.0
 sqlparse==0.4.2
