--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
 argon2-cffi==20.1.0
 asgiref==3.4.1
 cffi==1.14.6
+confusable-homoglyphs==3.2.0
 crispy-bootstrap5==0.4
 dj-database-url==0.5.0
 Django==3.2.12
 django-configurations==2.2
 django-crispy-forms==1.12.0
-django-debug-toolbar==3.2.4
+django-debug-toolbar==3.2.2
+django-registration==3.2
 pycparser==2.20
-pytz==2021.3
+pytz==2022.1
 six==1.16.0
 sqlparse==0.4.2
 typing-extensions==4.1.1
