--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django-configurations==2.2
 django-crispy-forms==1.12.0
 django-debug-toolbar==3.2.2
 django-registration==3.2
+djangorestframework==3.13.1
 idna==2.6
 ipython==5.5.0
 ipython_genutils==0.2.0
